k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - devops.local
    secretName: devops-local-tls
  rules:
  - host: devops.local
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: service-a
            port:
              number: 8080
      - path: /api/v2
        pathType: Prefix
        backend:
          service:
            name: service-b
            port:
              number: 8000
